[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytmdl"
version = "0.1.0"
description = "Download YouTube playlists as MP3s with video-frame thumbnails"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "rich",
]

[project.scripts]
ytmdl = "ytmdl.cli:main"
